# folio-pro

./: .gitignore  LICENSE  README.md
RPS_GAME/: CMakeLists.txt  Dockerfile  Makefile  ReadMe.md
RPS_GAME/docs/: ClassDiagram.md  Requirements.md  TraceabilityTable.md  UseCase.md
RPS_GAME/src/: Computer.cpp  Computer.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Human.cpp  Human.h  Moves.cpp  Player.cpp  Player.h  Test.cpp  Test.h  main.cpp
